# gaianir-open-clusters

./: LICENSE  README.md  fetch_data.py  pyproject.toml
data/: README.md
plots/: catalogues_over_time.ipynb  clusters.ipynb  disk-detectability.ipynb  dust_map.ipynb  rcw_36.ipynb  simulated_clusters.ipynb
prototypes/: README.md
prototypes/astrometry/: astrometry_models.ipynb
prototypes/cluster_sim/: simulating_clusters.ipynb
prototypes/dust_model/: dust_model.ipynb  fractal_noise_generation.ipynb  planck_map.ipynb
prototypes/photometry/: .gitignore  dustapprox.ipynb  faster_photometric_model.ipynb  model.ecsv  pyphot.ipynb
prototypes/selection/: kde_density.ipynb  selection.ipynb  selection_kde.ipynb
prototypes/synthpop/: run_synthpop.ipynb  synthpop+cluster.ipynb
results/: .gitignore  detection_results.parquet  extinction_model.ecsv  photometry.parquet  simulated_clusters.parquet
scripts/: 01_extinction_relation.py  02_additional_low_temp_star_photometry.py  03_create_interpolators.py  04_simulate_regions.py  05_simulate_clusters.py  06_calculate_detectability.py  README.md
src/gaianir_open_clusters/: __init__.py  astrometry.py  cluster_model.py  config.py  crowding.py  data.py  dust.py  gaia_nir_config.py  photometry.py  plots.py  population.py  postprocessing.py  util.py
synthpop_configs/: README.md  gaia_nir.synthpop_conf
