[project]
name = "gaianir-open-clusters"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "astroquery>=0.4.11",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "ocelot>=0.4.8",
    "pandas>=2.3.3",
    "ruff>=0.15.14",
    "synphot>=1.7.0",
    "synthpop",
]

[tool.uv.sources]
synthpop = { git = "https://github.com/synthpop-galaxy/synthpop", rev = "v1.1.3" }

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"
