[project]
name = "gaianir-open-clusters"
version = "0.1.0"
requires-python = "==3.13.11"
dependencies = [
    "astropy>=7.2.0",
    "astroquery>=0.4.11",
    "dustapprox>=0.2.0",
    "gala>=1.11.0",
    "hr-selection-function>=1.0.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "ocelot>=0.4.10",
    "pandas>=2.3.3",
    "pooch>=1.9.0",
    "pyphot>=2.1.1",
    "ruff>=0.15.14",
    "synphot>=1.7.0",
    "synthpop",
]

[tool.uv.sources]
synthpop = { git = "https://github.com/emilyhunt/synthpop" }
ocelot = { git = "https://github.com/emilyhunt/ocelot" }

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"
